crates/math-core/tests/snapshots/error_test__space_prime_2.snap
---
source: crates/math-core/tests/error_test.rs
expression: "x' '"
---
Error: Duplicate subscript or superscript.
   ╭─[ <input>:1:4 ]
   │
 1 │ x' '
   │    ┬  
   │    ╰── duplicate
───╯
